# EmployeeManagement

./: CMakeLists.txt  README.md  db_schema.sql  server.py
db/: PerformanceDatabase
include/: DatabaseManager.hpp  Models.hpp  NetworkManager.hpp  test.hpp
src/: DatabaseManager.cpp  Models.cpp  NetworkManager.cpp  main.cpp  test.cpp
